Thu Jul  9 01:33:15 2009                        Michael Jennings (mej)

Fixup for svn move.

Add support for rpmbuild stages and short-circuiting.
----------------------------------------------------------------------
Thu Aug 27 21:11:44 2009                        Michael Jennings (mej)

Check parent directory of non-directory modules.
----------------------------------------------------------------------
Tue Sep  1 20:32:41 2009                        Michael Jennings (mej)

Major functionality enhancements to perlpkg, including improved output
sorting, exact searches, and some automatic detection of package
architecture.  Some bugs were also fixed.
----------------------------------------------------------------------
Sat Nov 21 12:24:44 2009                        Michael Jennings (mej)

Port LibAST's spiftool_split() function to Perl as str_tokens().  It
tokenizes strings on customizable whitespace and supports quoting.
----------------------------------------------------------------------
Tue Mar  2 11:58:52 2010                                           mej

Fix infinite loop in source scanning.
----------------------------------------------------------------------
Mon Jan 31 23:16:32 2011                        Michael Jennings (mej)

Merge old caos-builder into Mezzanine as autobuilder/mzbuilder.
----------------------------------------------------------------------
Mon Jan 31 23:18:03 2011                        Michael Jennings (mej)

Refactor spec file detection for FST's.  Needs testing.  :-)
----------------------------------------------------------------------
Tue Feb  1 00:42:23 2011                        Michael Jennings (mej)

Move that back to Util.pm until I can refactor this mess. :-(
----------------------------------------------------------------------
Wed Feb  9 18:11:33 2011                        Michael Jennings (mej)

Minor tweaks.
----------------------------------------------------------------------