@@ -1221,3 +1221,7 @@ Wed Feb  9 18:11:33 2011                        Michael Jennings (mej)
 
 Minor tweaks.
 ----------------------------------------------------------------------
+Fri Feb 11 18:20:56 2011                        Michael Jennings (mej)
+
+Don't cross mount points when syncing instroot.
+----------------------------------------------------------------------
